# providers

./: pyproject.toml  requirements.txt  uwsgi.ini
providers/: app.py  models.py  run.py
providers/models/: provider.py
providers/resources/: provider.py  provider_list.py
providers/schemas/: provider.py
tests/: test_providers.py
